--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ node_modules
 test/fixtures/sample-plugin/plugin.zip
 test/fixtures/sample-plugin/*.ppk
 test/.output
+docs/dist/*
+!docs/dist/.gitkeep
