--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
     "from-manifest.js"
   ],
   "scripts": {
-    "circleci": "run-s test",
-    "css": "postcss node_modules/normalize.css/normalize.css > docs/dist/normalize.min.css",
+    "build": "run-p js css",
+    "lint": "npm run eslint",
+    "test": "run-s eslint mocha site:test",
+    "test:ci": "npm run test",
+    "css": "postcss --config postcss.config.js ../../node_modules/normalize.css/normalize.css > docs/dist/normalize.min.css",
     "eslint": "eslint *.js bin src site test",
     "js": "webpack --mode production",
     "js:dev": "webpack-dev-server --mode development",
     "mocha": "mocha --require intelli-espower-loader --timeout 10000",
-    "release": "npm run test && standard-version",
-    "release:dryrun": "standard-version --dry-run",
+    "prerelease": "run-p lint test build",
     "site": "run-p js css",
     "site:dev": "run-p css js:dev",
-    "site:test": "mocha site/test --require site/test/setup.js",
-    "test": "run-s eslint mocha site:test"
+    "site:test": "mocha site/test --require site/test/setup.js"
   },
   "dependencies": {
     "@kintone/plugin-manifest-validator": "^3.0.5",
