--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "run-s eslint mocha site:test",
     "test:ci": "npm run test",
     "css": "postcss --config postcss.config.js ../../node_modules/normalize.css/normalize.css > docs/dist/normalize.min.css",
-    "eslint": "eslint *.js bin src site test",
+    "eslint": "eslint '*.js' bin src site test",
     "js": "webpack --mode production",
     "js:dev": "webpack-dev-server --mode development",
     "mocha": "mocha --require intelli-espower-loader --timeout 10000",
