(subtree) fix: do not run eslint for a test script

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "build": "run-p js css",
     "lint": "npm run eslint",
-    "test": "run-p eslint mocha site:test",
+    "test": "run-p mocha site:test",
     "test:ci": "npm run test",
     "css": "postcss --config postcss.config.js ../../node_modules/normalize.css/normalize.css > docs/dist/normalize.min.css",
     "eslint": "eslint \"*.js\" bin src site test",
