--- a/package.json
+++ b/package.json
@@ -50,9 +50,21 @@
     "node": ">=14"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^28.1.4",
+    "@types/node": "^18.0.1",
     "@types/yargs": "^17.0.10",
+    "babel-jest": "^28.1.2",
     "cross-env": "^7.0.3",
-    "pkg": "^5.7.0"
+    "eslint": "^8.19.0",
+    "jest": "^28.1.2",
+    "npm-run-all": "^4.1.5",
+    "pkg": "^5.7.0",
+    "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "@kintone/rest-api-client": "^3.1.4",
