chore: configure eslint and prettier

--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
   },
   "types": "lib/index.d.ts",
   "scripts": {
+    "start": "yarn build --watch",
     "prebuild": "yarn clean",
     "build": "tsc --build --force",
     "postbuild": "yarn pkg",
-    "lint": "run-p -l lint:*",
+    "pkg": "pkg . -o bin/kintone-data-loader -t linux,macos,win",
     "test": "jest",
     "test:ci": "jest --runInBand",
-    "clean": "rimraf lib bin",
-    "pkg": "pkg . -o bin/kintone-data-loader -t linux,macos,win",
-    "fix:lint": "yarn lint:eslint -- --fix",
-    "fix:md": "prettier --write README.md",
+    "lint": "run-p -l lint:*",
+    "lint:eslint": "eslint --ext .js,.mjs,.cjs,.ts,.mts,.cts ./",
+    "lint:md": "prettier --check ./**/*.md",
     "fix": "run-p fix:*",
-    "lint:eslint": "eslint 'src/**/*.ts'",
-    "lint:md": "prettier --check README.md",
-    "start": "yarn build --watch"
+    "fix:lint": "run-s 'lint:eslint --fix'",
+    "fix:md": "run-s 'lint:md --write'",
+    "clean": "rimraf lib bin"
   },
   "repository": {
     "type": "git",
@@ -53,6 +53,7 @@
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@cybozu/eslint-config": "^17.0.2",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.1",
     "@types/yargs": "^17.0.10",
