--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kintone/js-sdk.git",
-    "directory": "packages/data-loader"
+    "url": "git+https://github.com/kintone/cli-kintone.git"
   },
   "files": [
     "lib",
@@ -43,9 +42,9 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kintone/js-sdk/issues"
+    "url": "https://github.com/kintone/cli-kintone/issues"
   },
-  "homepage": "https://github.com/kintone/js-sdk/tree/master/packages/data-loader#readme",
+  "homepage": "https://github.com/kintone/cli-kintone/#readme",
   "engines": {
     "node": ">=14"
   },
