--- a/package.json
+++ b/package.json
@@ -14,25 +14,24 @@
   },
   "types": "lib/index.d.ts",
   "scripts": {
+    "start": "yarn build --watch",
     "prebuild": "yarn clean",
     "build": "tsc --build --force",
     "postbuild": "yarn pkg",
-    "lint": "run-p -l lint:*",
+    "pkg": "pkg . -o bin/kintone-data-loader -t linux,macos,win",
     "test": "jest",
     "test:ci": "jest --runInBand",
-    "clean": "rimraf lib bin",
-    "pkg": "pkg . -o bin/kintone-data-loader -t linux,macos,win",
-    "fix:lint": "yarn lint:eslint -- --fix",
-    "fix:md": "prettier --write README.md",
+    "lint": "run-p -l lint:*",
+    "lint:eslint": "eslint --ext .js,.mjs,.cjs,.ts,.mts,.cts ./",
+    "lint:md": "prettier --check ./**/*.md",
     "fix": "run-p fix:*",
-    "lint:eslint": "eslint 'src/**/*.ts'",
-    "lint:md": "prettier --check README.md",
-    "start": "yarn build --watch"
+    "fix:lint": "run-s 'lint:eslint --fix'",
+    "fix:md": "run-s 'lint:md --write'",
+    "clean": "rimraf lib bin"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kintone/js-sdk.git",
-    "directory": "packages/data-loader"
+    "url": "git+https://github.com/kintone/cli-kintone.git"
   },
   "files": [
     "lib",
@@ -43,16 +42,29 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/kintone/js-sdk/issues"
+    "url": "https://github.com/kintone/cli-kintone/issues"
   },
-  "homepage": "https://github.com/kintone/js-sdk/tree/master/packages/data-loader#readme",
+  "homepage": "https://github.com/kintone/cli-kintone/#readme",
   "engines": {
     "node": ">=14"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@cybozu/eslint-config": "^17.0.2",
+    "@types/jest": "^28.1.4",
+    "@types/node": "^18.0.1",
     "@types/yargs": "^17.0.10",
+    "babel-jest": "^28.1.2",
     "cross-env": "^7.0.3",
-    "pkg": "^5.7.0"
+    "eslint": "^8.19.0",
+    "jest": "^28.1.2",
+    "npm-run-all": "^4.1.5",
+    "pkg": "^5.7.0",
+    "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "@kintone/rest-api-client": "^3.1.4",
