--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "npm-run-all": "^4.1.5",
     "pkg": "^5.7.0",
     "prettier": "^2.7.1",
+    "release-please": "^13.18.7",
     "rimraf": "^3.0.2",
     "typescript": "^4.7.4"
   },
