--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   release:
-    name: Release package
+    name: Create draft release
     outputs:
       release_created: ${{ steps.release.outputs.release_created }}
       tag_name: ${{ steps.release.outputs.tag_name }}
@@ -16,6 +16,19 @@ jobs:
         id: release
         with:
           command: manifest
+
+  rename:
+    name: Rename release title
+    runs-on: ubuntu-latest
+    needs: release
+    if: ${{ needs.release.outputs.release_created }}
+    env:
+      GH_REPO: ${{ github.repository }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - run: |
+          gh release edit ${{ needs.release.outputs.tag_name }} \
+          --title "Release cli-kintone ${{ needs.release.outputs.tag_name }}"
 
   upload:
     name: Upload executables
@@ -39,3 +52,13 @@ jobs:
             ./bin/cli-kintone-macos \
             ./bin/cli-kintone-linux \
             ./bin/cli-kintone-win.exe
+
+  publish:
+    name: Publish release
+    runs-on: ubuntu-latest
+    needs: [release, rename, upload]
+    env:
+      GH_REPO: ${{ github.repository }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - run: gh release edit ${{ needs.release.outputs.tag_name }} --draft=false
