chore: fix release tag name to vX.Y.Z

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -7,7 +7,9 @@
       "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": false,
       "changelog-path": "CHANGELOG.md",
-      "versioning": "default"
+      "versioning": "default",
+      "include-component-in-tag": false,
+      "include-v-in-tag": true
     }
   }
 }
