ci: replace usage of `--immutable` to `--frozen-lockfile`

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           node-version: 16.x
           cache: yarn
-      - run: yarn install --immutable
+      - run: yarn install --frozen-lockfile
       - run: yarn build
       - name: Archive executables to zip
         working-directory: /tmp
