--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,6 +27,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: yarn
-    - run: yarn install --immutable
+    - run: yarn install --frozen-lockfile
     - run: yarn build
     - run: yarn test:ci
