--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   "dependencies": {
     "@kintone/rest-api-client": "^3.1.7",
     "csv-parse": "^4.16.3",
+    "csv-stringify": "5.6.4",
     "https-proxy-agent": "^5.0.1",
     "iconv-lite": "^0.6.3",
     "yargs": "^17.5.1"
