--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   },
   "dependencies": {
     "@kintone/rest-api-client": "^3.1.11",
+    "chalk": "4",
     "csv-parse": "^4.16.3",
     "csv-stringify": "5.6.5",
     "https-proxy-agent": "^5.0.1",
