--- a/license-finder-decisions.yml
+++ b/license-finder-decisions.yml
@@ -113,3 +113,9 @@
     :why: Because we will not redistribute this package.
     :versions: []
     :when: 2021-11-19 09:47:28.241784549 Z
+- - :approve
+  - map-stream
+  - :who: 
+    :why: Because we will not redistribute this package.
+    :versions: []
+    :when: 2022-10-07 13:06:35.452317000 Z
