--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,9 @@ jobs:
     needs: release
     if: ${{ needs.release.outputs.release_created }}
     steps:
+      - uses: jonabc/setup-licensed@23892537a4b9275324fe790ff1057eb1d00fddbd
+        with:
+          version: '3.x'
       - uses: actions/checkout@v3
       - name: Use Node.js 16.x
         uses: actions/setup-node@v3
@@ -43,25 +46,15 @@ jobs:
           node-version: 16.x
           cache: yarn
       - run: yarn install --frozen-lockfile
-      - run: yarn build
-      - name: Archive executables to zip
-        working-directory: /tmp
-        run: |
-          mkdir -p /tmp/cli-kintone-{linux,macos,win}
-          cp ${GITHUB_WORKSPACE}/bin/cli-kintone-linux cli-kintone-linux/cli-kintone
-          cp ${GITHUB_WORKSPACE}/bin/cli-kintone-macos cli-kintone-macos/cli-kintone
-          cp ${GITHUB_WORKSPACE}/bin/cli-kintone-win.exe cli-kintone-win/cli-kintone.exe
-          zip -r cli-kintone-linux.zip cli-kintone-linux
-          zip -r cli-kintone-macos.zip cli-kintone-macos
-          zip -r cli-kintone-win.zip cli-kintone-win
+      - run: yarn build:artifacts
       - name: Upload executables
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release upload ${{ needs.release.outputs.tag_name }} \
-            /tmp/cli-kintone-linux.zip \
-            /tmp/cli-kintone-macos.zip \
-            /tmp/cli-kintone-win.zip
+            ${GITHUB_WORKSPACE}/artifacts/cli-kintone-linux.zip \
+            ${GITHUB_WORKSPACE}/artifacts/cli-kintone-macos.zip \
+            ${GITHUB_WORKSPACE}/artifacts/cli-kintone-win.zip
 
   publish:
     name: Publish release
