--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.10",
     "@types/yargs": "^17.0.13",
+    "@types/inquirer": "^8.2.5",
     "babel-jest": "^29.3.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.28.0",
@@ -77,6 +78,7 @@
     "csv-stringify": "5.6.5",
     "https-proxy-agent": "^5.0.1",
     "iconv-lite": "^0.6.3",
-    "yargs": "^17.6.2"
+    "yargs": "^17.6.2",
+    "inquirer": "^8.2.5"
   }
 }
