--- a/.licensed.yml
+++ b/.licensed.yml
@@ -14,6 +14,7 @@ allowed:
   - apache-2.0
   - bsd-3-clause
   - isc
+  - 0bsd
 
 # These dependencies are ignored during enumeration.
 # They will not be cached, and will not raise errors or warnings.
@@ -35,3 +36,11 @@ allowed:
 reviewed:
   npm:
     - color-convert # MIT
+    - bl # MIT
+    - wcwidth # MIT
+    - type-fest # MIT OR CC0-1.0
+    - string_decoder # MIT
+    - string_decoder # MIT
+    - readable-stream # MIT
+    - lodash # MIT
+    - ieee754 # BSD-3-Clause
