--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "tsc --build --force",
     "postbuild": "yarn pkg",
     "build:artifacts": "run-s build licensed compress",
-    "pkg": "pkg . -o bin/cli-kintone -t linux,macos,win",
+    "pkg": "vite build --force && pkg ./dist/cli/main.js --compress Brotli -o bin/cli-kintone -t linux,macos,win",
     "licensed": "zx ./scripts/generate-license-notice.mjs",
     "compress": "zx ./scripts/compress-to-zip-file.mjs",
     "test": "jest",
@@ -68,7 +68,10 @@
     "prettier": "^2.8.2",
     "rimraf": "^3.0.2",
     "typescript": "^4.8.4",
-    "zx": "^7.1.1"
+    "zx": "^7.1.1",
+    "vite": "^4.0.4",
+    "glob": "^8.0.3",
+    "rollup-plugin-multi-input": "^1.3.2"
   },
   "dependencies": {
     "@kintone/rest-api-client": "^3.2.3",
