--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/rollup-plugin-auto-external": "^2.0.2",
     "@types/yargs": "^17.0.13",
     "babel-jest": "^29.4.2",
+    "@types/inquirer": "^8.2.5",
     "cross-env": "^7.0.3",
     "eslint": "^8.34.0",
     "jest": "^29.4.2",
@@ -84,6 +85,7 @@
     "csv-stringify": "5.6.5",
     "https-proxy-agent": "^5.0.1",
     "iconv-lite": "^0.6.3",
-    "yargs": "^17.6.2"
+    "yargs": "^17.6.2",
+    "inquirer": "^8.2.5"
   }
 }
