--- a/renovate.json5
+++ b/renovate.json5
@@ -1,14 +1,36 @@
 {
-  extends: ["github>cybozu/renovate-config", ":prConcurrentLimitNone"],
+  extends: [
+    "github>cybozu/renovate-config",
+    ":prConcurrentLimitNone"
+  ],
   npm: {
     packageRules: [
       {
         // automerge minor updates of devDependencies
-        matchPackagePatterns: ["*"],
-        matchDepTypes: ["devDependencies"],
-        matchUpdateTypes: ["minor"],
+        matchPackagePatterns: [
+          "*"
+        ],
+        matchDepTypes: [
+          "devDependencies"
+        ],
+        matchUpdateTypes: [
+          "minor"
+        ],
         automerge: true,
       },
     ],
   },
+  "packageRules": [
+    {
+      // Third party actions should be pinned with digest
+      "matchDepTypes": [
+        "action"
+      ],
+      excludePackagePrefixes: [
+        "actions/",
+        "cybozu/"
+      ],
+      "pinDigests": true
+    }
+  ]
 }
