--- a/package.json
+++ b/package.json
@@ -58,12 +58,12 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.21.0",
     "@cybozu/eslint-config": "^18.0.1",
+    "@types/inquirer": "^8.2.6",
     "@types/jest": "^29.4.1",
     "@types/node": "^18.14.5",
     "@types/rollup-plugin-auto-external": "^2.0.2",
     "@types/yargs": "^17.0.13",
     "babel-jest": "^29.4.2",
-    "@types/inquirer": "^8.2.6",
     "cross-env": "^7.0.3",
     "eslint": "^8.35.0",
     "jest": "^29.4.2",
@@ -85,7 +85,7 @@
     "csv-stringify": "5.6.5",
     "https-proxy-agent": "^5.0.1",
     "iconv-lite": "^0.6.3",
-    "yargs": "^17.7.1",
-    "inquirer": "^8.2.5"
+    "inquirer": "^8.2.5",
+    "yargs": "^17.7.1"
   }
 }
