--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   release:
     name: Create draft release
+    permissions:
+      contents: write
+      pull-requests: write
     outputs:
       release_created: ${{ steps.release.outputs.release_created }}
       tag_name: ${{ steps.release.outputs.tag_name }}
@@ -19,6 +22,8 @@ jobs:
 
   rename:
     name: Rename release title
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     needs: release
     if: ${{ needs.release.outputs.release_created }}
@@ -32,6 +37,8 @@ jobs:
 
   upload:
     name: Upload executables
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     needs: release
     if: ${{ needs.release.outputs.release_created }}
@@ -60,6 +67,8 @@ jobs:
 
   publish:
     name: Publish release
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     needs: [release, rename, upload]
     env:
