--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "babel-jest": "^29.5.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.38.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "^29.5.0",
     "npm-run-all": "^4.1.5",
     "pkg": "^5.8.1",
