--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,16 +1,49 @@
 name: "🐛 Bug report"
 description: Report for reproducible bug
-labels: [bug]
+labels: ["bug"]
+title: "[Bug] "
 body:
   - type: markdown
     attributes:
       value: |
         Thank you for reporting a bug!
+        Please fill out the following.
   - type: input
     id: version
     attributes:
       label: Target Version
       placeholder: e.g. vX.Y.Z
+      description: Which version of cli-kintone do you want to report a bug for? 
+    validations:
+      required: true
+  - type: input
+    id: os
+    attributes:
+      label: Operation System
+      placeholder: Windows 10
       description: Which version do you want to report a bug for? 
+    validations:
+      required: true
+  - type: input
+    id: reproduction
+    attributes:
+      label: Link To Reproduction
+      description: |
+        Please provide a link to a [minimum reproduction](https://stackoverflow.com/help/minimal-reproducible-example).
+        1. Creating minimum repository
+        2. Creating minimum code snippet on [GitHub Gist](https://gist.github.com/)
+      placeholder: Reproduction URL
+    validations:
+      required: true
+  - type: textarea
+    id: expected_behaviour
+    attributes:
+      label: Expected Behaviour
+    validations:
+      required: true
+  - type: textarea
+    id: actual_behaviour
+    attributes:
+      label: Actual Behaviour
     validations:
       required: true
