--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -29,7 +29,7 @@ body:
     attributes:
       label: Link To Reproduction
       description: |
-        Please provide a link to a [minimum reproduction](https://stackoverflow.com/help/minimal-reproducible-example). A repo or [GitHub Gist](https://gist.github.com/) is preferred.
+        Please provide a link to a [minimum reproduction](https://stackoverflow.com/help/minimal-reproducible-example). A repository or [GitHub Gist](https://gist.github.com/) is preferred.
       placeholder: Reproduction URL
     validations:
       required: true
