--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,5 +1,5 @@
 name: "🐛 Bug report"
-description: Report for reproducible bug
+description: Report for reproducible bug of cli-kintone
 labels: ["bug"]
 title: "[Bug] "
 body:
@@ -21,9 +21,17 @@ body:
     attributes:
       label: Operation System
       placeholder: Windows 10
-      description: Which version do you want to report a bug for? 
+      description: What Operating system did the bug occur on?
     validations:
       required: true
+  - type: input
+    id: shell
+    attributes:
+      label: Shell
+      placeholder: zsh 5.9
+      description: If the bug seems depends on shell, please tell us your shell and its version
+    validations:
+      required: false
   - type: input
     id: reproduction
     attributes:
@@ -34,14 +42,16 @@ body:
     validations:
       required: true
   - type: textarea
-    id: expected_behaviour
+    id: expected_behavior
     attributes:
-      label: Expected Behaviour
+      label: Expected Behavior
+      description: What is the behavior you expected?
     validations:
       required: true
   - type: textarea
-    id: actual_behaviour
+    id: actual_behavior
     attributes:
-      label: Actual Behaviour
+      label: Actual Behavior
+      description: What is the actual behavior you saw?
     validations:
       required: true
