--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -7,6 +7,7 @@ body:
     attributes:
       value: |
         Thank you for reporting a bug! Please fill out the following.
+        # Summary
   - type: textarea
     id: summary
     attributes:
