--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -17,7 +17,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        # Environment
+        ## Environment
   - type: input
     id: version
     attributes:
