--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -11,7 +11,7 @@ body:
     id: why
     attributes:
       label: Why
-      description: Why do you want the feature and why does it make sense for the package?
+      description: Why do you want the feature, and why should it be in the package?
     validations:
       required: true
   - type: textarea
