--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,12 @@ attachments
 # secrets
 .env
 .envrc
+
+# yarn v3
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
