--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "url": "https://cybozu.co.jp"
   },
   "description": "A cli-kintone",
-  "bin": {
-    "cli-kintone": "cli.js"
-  },
+  "bin": "cli.js",
   "types": "lib/index.d.ts",
   "scripts": {
     "start": "yarn build --watch",
@@ -84,5 +82,6 @@
     "iconv-lite": "^0.6.3",
     "inquirer": "^8.2.5",
     "yargs": "^17.7.2"
-  }
+  },
+  "packageManager": "yarn@3.6.0"
 }
