debug: update script and test

--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "typecheck": "tsc --pretty --noEmit",
     "test": "jest",
     "test:ci": "jest --runInBand",
-    "lint": "run-p -l lint:*",
+    "lint": "run-p -l 'lint:*'",
     "lint:eslint": "eslint --ext .js,.mjs,.cjs,.ts,.mts,.cts ./",
     "lint:md": "prettier --check ./**/*.md",
-    "fix": "run-p fix:*",
+    "fix": "run-p 'fix:*'",
     "fix:lint": "run-s 'lint:eslint --fix'",
     "fix:md": "run-s 'lint:md --write'",
     "clean": "rimraf lib bin artifacts dist"
