--- a/package.json
+++ b/package.json
@@ -61,10 +61,15 @@
     "@types/node": "^18.16.18",
     "@types/rollup-plugin-auto-external": "^2.0.2",
     "@types/yargs": "^17.0.24",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@vercel/ncc": "^0.36.1",
     "babel-jest": "^29.5.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
     "npm-run-all": "^4.1.5",
     "pkg": "^5.8.1",
