debug: migrate to pnpm

--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
   },
   "types": "lib/index.d.ts",
   "scripts": {
-    "start": "yarn build --watch",
-    "prebuild": "yarn clean",
-    "build": "ncc build ./src/cli/main.ts -m",
-    "postbuild": "yarn pkg",
+    "start": "pnpm build:prod --watch",
+    "build": "pnpm clean && pnpm build:prod && pnpm package",
+    "build:prod": "ncc build ./src/cli/main.ts -m",
     "build:artifacts": "run-s build licensed compress",
-    "pkg": "pkg ./dist/index.js --compress Brotli -o bin/cli-kintone -t linux,macos,win",
+    "package": "pkg ./dist/index.js --compress Brotli -o bin/cli-kintone -t linux,macos,win",
     "licensed": "zx ./scripts/generate-license-notice.mjs",
     "compress": "zx ./scripts/compress-to-zip-file.mjs",
     "typecheck": "tsc --pretty --noEmit",
