--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,8 @@ jobs:
         with:
           node-version: 16.x
           cache: yarn
-      - run: yarn install --frozen-lockfile
-      - run: yarn build:artifacts
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm build:artifacts
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
