--- a/.github/workflows/yamory.yml
+++ b/.github/workflows/yamory.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
       - name: Use Node.js 16.x
         uses: actions/setup-node@v3
         with:
