--- a/license-finder-decisions.yml
+++ b/license-finder-decisions.yml
@@ -125,3 +125,9 @@
     :why: Because we will not redistribute this package.
     :versions: []
     :when: 2023-03-28 03:51:22.738300000 Z
+- - :approve
+  - pause-stream
+  - :who:
+    :why:
+    :versions: []
+    :when: 2023-06-22 15:22:28.901657000 Z
