--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -43,14 +43,16 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
-      - name: Install Node modules
-        uses: pnpm/action-setup@v2
+      - uses: pnpm/action-setup@v2
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v3
         with:
-          run_install: |
-            - recursive: true
-              args: [--frozen-lockfile, --strict-peer-dependencies]
+          node-version: 16.x
+          cache: pnpm
+      - run: pnpm recursive install --frozen-lockfile
 
       - name: Check licenses
         run: |
+          licensed cache
           licensed status
           licensed notices
