debug: revert license script

--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -43,13 +43,8 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
-      - uses: pnpm/action-setup@v2
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16.x
-          cache: pnpm
-      - run: pnpm recursive install --frozen-lockfile
+      - name: Install Node modules
+        run: pnpm install --frozen-lockfile
 
       - name: Check licenses
         run: |
