debug: reorder steps

--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -34,17 +34,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Check out repository
+        uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+      - uses: pnpm/action-setup@v2
+      - name: Install Node modules
+        run: pnpm install --frozen-lockfile
       - name: Setup Licensed
         uses: jonabc/setup-licensed@d6b3a6f7058c2b40c06d205e13e15c2418977566 # renovate: tag=v1.1.4
         with:
           version: '3.x'
           github_token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Check out repository
-        uses: actions/checkout@v3
-
-      - name: Install Node modules
-        run: pnpm install --frozen-lockfile
 
       - name: Check licenses
         run: |
