test: add cucumber package and example

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typecheck": "tsc --pretty --noEmit",
     "test": "jest",
     "test:ci": "jest --runInBand",
+    "test:e2e": "cucumber-js",
     "lint": "run-p -l lint:*",
     "lint:eslint": "eslint --ext .js,.mjs,.cjs,.ts,.mts,.cts ./",
     "lint:md": "prettier --check ./**/*.md",
@@ -57,6 +58,7 @@
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@cucumber/cucumber": "^9.2.0",
     "@cybozu/eslint-config": "^18.0.3",
     "@types/inquirer": "^8.2.6",
     "@types/jest": "^29.5.2",
