--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "pkg": "^5.8.1",
     "prettier": "^2.8.8",
     "rimraf": "^4.4.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.3",
     "zx": "^7.2.2"
   },
