--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -42,7 +42,7 @@ jobs:
         run: pnpm install --frozen-lockfile
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.0'
+          ruby-version: ruby
       - name: Setup Licensed
         uses: jonabc/setup-licensed@d6b3a6f7058c2b40c06d205e13e15c2418977566 # renovate: tag=v1.1.4
         with:
