--- a/.licensed.yml
+++ b/.licensed.yml
@@ -35,12 +35,11 @@ allowed:
 # license text cannot be found for the dependency.
 reviewed:
   pnpm:
-    - color-convert # MIT
-    - bl # MIT
-    - wcwidth # MIT
-    - type-fest # MIT OR CC0-1.0
-    - string_decoder # MIT
-    - string_decoder # MIT
-    - readable-stream # MIT
-    - lodash # MIT
-    - ieee754 # BSD-3-Clause
+    - color-convert@>=2.0.1 # MIT
+    - bl@>=4.1.0 # MIT
+    - wcwidth@>=1.0.1 # MIT
+    - type-fest@>=0.21.3 # MIT OR CC0-1.0
+    - string_decoder@>=1.3.0 # MIT
+    - readable-stream@>=3.6.0 # MIT
+    - lodash@>=4.17.21 # MIT
+    - ieee754@>=1.2.1 # BSD-3-Clause
