debug: migrate to npm v9

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,9 +20,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
-          cache: yarn
-      - run: yarn install --frozen-lockfile
-      - run: yarn build:artifacts
+          cache: npm
+      - run: npm ci
+      - run: npm run build:artifacts
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
