--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 16.x
-        cache: yarn
-    - run:  yarn install --frozen-lockfile
-    - run:  yarn build
-    - run:  yarn lint
+        cache: npm
+    - run:  npm ci
+    - run:  npm run build
+    - run:  npm run lint
