--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: yarn
-    - run: yarn install --frozen-lockfile
-    - run: yarn build
-    - run: yarn test:ci
+        cache: npm
+    - run: npm ci
+    - run: npm run build
+    - run: npm run test:ci
