--- a/.github/workflows/yamory.yml
+++ b/.github/workflows/yamory.yml
@@ -22,9 +22,9 @@ jobs:
         working-directory: /tmp
         run: |
           curl -sSf -L -o ./yamory-pnpm.sh https://localscanner.yamory.io/script/pnpm
-          curl -sSf -L -o ./yamory-pnpm-sha512sum.txt \
-            https://cli.yamory.io/yamory-app-library-scan-scripts/yamory-pnpm-sha512sum.txt
-          sha512sum --check yamory-pnpm-sha512sum.txt
+#          curl -sSf -L -o ./yamory-pnpm-sha512sum.txt \
+#            https://cli.yamory.io/yamory-app-library-scan-scripts/yamory-pnpm-sha512sum.txt
+#          sha512sum --check yamory-pnpm-sha512sum.txt
           chmod +x ./yamory-pnpm.sh
       - name: run Yamory
         run: /tmp/yamory-pnpm.sh
