--- a/.github/workflows/yamory.yml
+++ b/.github/workflows/yamory.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           node-version: 16.x
           cache: pnpm
+      - run: pnpm install --frozen-lockfile
       - name: download and validate Yamory script
         working-directory: /tmp
         run: |
