build: migrate from yarn to pnpm

--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   },
   "types": "lib/index.d.ts",
   "scripts": {
-    "start": "yarn build --watch",
-    "prebuild": "yarn clean",
+    "preinstall": "npx only-allow pnpm",
+    "start": "pnpm build --watch",
+    "prebuild": "pnpm clean",
     "build": "ncc build ./src/cli/main.ts -m",
-    "postbuild": "yarn pkg",
+    "postbuild": "pnpm pkg",
     "build:artifacts": "run-s build licensed compress",
     "pkg": "pkg ./dist/index.js --compress Brotli -o bin/cli-kintone -t linux,macos,win",
     "licensed": "zx ./scripts/generate-license-notice.mjs",
