--- a/.github/workflows/yamory.yml
+++ b/.github/workflows/yamory.yml
@@ -15,17 +15,17 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
-          cache: yarn
+          pnpm: pnpm
       - name: download and validate Yamory script
         working-directory: /tmp
         run: |
-          curl -sSf -L -o ./yamory-yarn.sh https://localscanner.yamory.io/script/yarn
-          curl -sSf -L -o ./yamory-yarn-sha512sum.txt \
-            https://cli.yamory.io/yamory-app-library-scan-scripts/yamory-yarn-sha512sum.txt
-          sha512sum --check yamory-yarn-sha512sum.txt
-          chmod +x ./yamory-yarn.sh
+          curl -sSf -L -o ./yamory-pnpm.sh https://localscanner.yamory.io/script/pnpm
+          curl -sSf -L -o ./yamory-pnpm-sha512sum.txt \
+            https://cli.yamory.io/yamory-app-library-scan-scripts/yamory-pnpm-sha512sum.txt
+          sha512sum --check yamory-pnpm-sha512sum.txt
+          chmod +x ./yamory-pnpm.sh
       - name: run Yamory
-        run: /tmp/yamory-yarn.sh
+        run: /tmp/yamory-pnpm.sh
         env:
           CI: true
           PROJECT_GROUP_KEY: cli-kintone
