--- a/.github/workflows/yamory.yml
+++ b/.github/workflows/yamory.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
-          pnpm: pnpm
+          cache: pnpm
       - name: download and validate Yamory script
         working-directory: /tmp
         run: |
