--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 16.x
-        pnpm: pnpm
+        cache: pnpm
     - run:  pnpm install --frozen-lockfile
     - run:  pnpm build
     - run:  pnpm lint
