--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
-          pnpm: pnpm
+          cache: pnpm
       - run: pnpm install --frozen-lockfile
       - run: pnpm build:artifacts
       - name: Upload executables
