--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        pnpm: pnpm
+        cache: pnpm
     - run: pnpm install --frozen-lockfile
     - run: pnpm build
     - run: pnpm test:ci
