--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -40,6 +40,12 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 7
+          run_install: false
+
       - name: Install Node modules
         run: pnpm install --frozen-lockfile
 
