--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -40,14 +40,16 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v3
         with:
-          version: 7
-          run_install: false
+          node-version: 16.x
+          cache: pnpm
+      - name: Install pnpm
+        run:  npm install -g pnpm@8.6.5
 
-      - name: Install Node modules
-        run: pnpm install --frozen-lockfile
+      - name: Install dependencies
+        run:  pnpm install --frozen-lockfile
 
       - name: Check licenses
         run: |
