--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,19 +14,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - uses: pnpm/action-setup@v2
-      name: Install pnpm
-      with:
-        version: 7
-        run_install: false
     - name: Use Node.js 16.x
       uses: actions/setup-node@v3
       with:
         node-version: 16.x
         cache: pnpm
+    - name: Install pnpm
+      run:  npm install -g pnpm@8.6.5
 
     - name: Install dependencies
-      run:  pnpm install
-    - run:  pnpm install --frozen-lockfile
+      run:  pnpm install --frozen-lockfile
     - run:  pnpm build
     - run:  pnpm lint
