--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,16 +22,14 @@ jobs:
     steps:
     - run: git config --global core.autocrlf false
     - uses: actions/checkout@v3
-    - uses: pnpm/action-setup@v2
-      name: Install pnpm
-      with:
-        version: 7
-        run_install: false
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: pnpm
-    - run: pnpm install --frozen-lockfile
+    - name: Install pnpm
+      run:  npm install -g pnpm@8.6.5
+    - name: Install dependencies
+      run:  pnpm install --frozen-lockfile
     - run: pnpm build
     - run: pnpm test:ci
