build: fix license job

--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -19,6 +19,15 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
+
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+
+      - name: Install pnpm
+        run:  npm install -g pnpm@8.6.5
+
       - name: Install Node modules
         run: pnpm install --frozen-lockfile
 
@@ -44,6 +53,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
+
       - name: Install pnpm
         run:  npm install -g pnpm@8.6.5
 
