--- a/license-finder-decisions.yml
+++ b/license-finder-decisions.yml
@@ -125,3 +125,9 @@
     :why: Because we will not redistribute this package.
     :versions: []
     :when: 2023-03-28 03:51:22.738300000 Z
+- - :approve
+  - pause-stream-0.0.11
+  - :who:
+    :why: Because we will not redistribute this package.
+    :versions: []
+    :when: 2023-07-13 06:04:27.064143000 Z
