build: fix license job

--- a/license-finder-decisions.yml
+++ b/license-finder-decisions.yml
@@ -126,8 +126,8 @@
     :versions: []
     :when: 2023-03-28 03:51:22.738300000 Z
 - - :approve
-  - pause-stream-0.0.11
+  - pause-stream
   - :who:
     :why: Because we will not redistribute this package.
     :versions: []
-    :when: 2023-07-13 06:04:27.064143000 Z
+    :when: 2023-07-13 06:17:46.739770000 Z
