build: update v3 to v4 setup-licensed

--- a/.github/workflows/license.yml
+++ b/.github/workflows/license.yml
@@ -39,6 +39,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # setup ruby environment before running jonabc/setup-licensed
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ruby
+
       - name: Setup Licensed
         uses: jonabc/setup-licensed@d6b3a6f7058c2b40c06d205e13e15c2418977566 # renovate: tag=v1.1.4
         with:
